# og_bots

./: .env.swp  .gitignore  og.service  pyproject.toml  run.py  Бот 2024-2025.docx
src/: __init__.py  run.py
src/QA/: methods.py
src/bot/: __init__.py  bot.py  fsm.py  methods.py
src/bot/handlers/: QA.py  __init__.py  dormitory.py  menu.py
src/bot/keyboards/: QA.py  __init__.py  dormitory.py  menu.py
src/database/: __init__.py  database.py  models.py
src/dormitory/: __init__.py  comforts.py  methods.py
src/media/: answers.csv  comforts.csv
